// Copyright (c) ZeroC, Inc.

syntax = "proto3";

package visitor_center;

// The protobuf equivalent of Slice interface Greeter in the Greeter example.
// Here, it's purely for documentation purposes since protoc for C# doesn't generate anything for service definitions.
service Greeter {
  // Creates a personalized greeting.
  rpc Greet (GreetRequest) returns (GreetResponse);
}

// The request contains the name of the person to greet.
message GreetRequest {
  string name = 1;
}

// The response contains the greeting.
message GreetResponse {
  string greeting = 1;
}
